@@ -47,8 +47,9 @@ v.0.5dev (ongoing development)
  * hd44780 driver: "euro" character mapping table (Markus Dolze)
  * CwLnx driver: support for CW12832
  + new driver mx5000 for Logitech MX5000 keyboards (Christian Jodar)
- * update debian inits scripts to allow multiple instances of clients
+ * update debian init scripts to allow multiple instances of clients
  + serialVFD driver: support for 4 more display types (Stefan Herdler)
+ * IOWarrior driver: fixed 4-line display use
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
